# rust-shorty

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  build  build.sh  clippy.toml
.github/workflows/: ci.yml
cgi/: Cargo.toml
cgi/src/: cgi_env.rs  controller.rs  lib.rs  main.rs  sentry.rs  templates.rs
cgi/templates/: base.html  http_error.html  quotation.html  short_url.html
shorty/: Cargo.toml
shorty-cgi/: Cargo.toml
shorty-cgi/src/: controller.rs  lib.rs  main.rs  sentry.rs  templates.rs
shorty-cgi/templates/: base.html  short_url.html
shorty-cgi/tests/: cli_test.rs
shorty-cli/: Cargo.toml
shorty-cli/src/: main.rs
shorty-cli/tests/: cli_test.rs
shorty/src/: lib.rs  repo.rs  types.rs
shorty/src/repository/: mod.rs  sqlite.rs
shorty/src/repository/migrations/sqlite/: 1.down.sql  1.up.sql  2.down.sql  2.up.sql
static/css/: style.css
