[workspace]
members = ["shorty-cgi", "shorty", "shorty-cli"]
resolver = "3"

[workspace.dependencies]
url = { version = "2.5.4", default-features = false }
http = { version = "1.2", default-features = false }
headers = { version = "0.4.1", default-features = false }
matchit = { version = "0.9.1", default-features = false }
rusqlite = { version = "0.38.0", default-features = false, features = [
  "bundled",
] }
askama = { version = "0.15", default-features = true }
qrcode = { version = "0.14", default-features = false }
base64 = { version = "0.22", default-features = true }
serde = { version = "1.0", default-features = true }
serde_plain = { version = "1.0", default-features = false }
anyhow = "1.0"
git-version = "0.3"
sentry = { version = "0.46", default-features = false, features = [
  "ureq",
  "rustls",
  "backtrace",
  "contexts",
  "debug-images",
  "panic",
  "anyhow",
  "release-health",
] }
toml = { version = "0.9" }
xxhash-rust = "0.8"
clap = { version = "4.5" }
csv = "1"
assert_cmd = "2"
tempfile = "3"
chrono = { version = "0.4.41", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"
unknown_lints = "forbid"
elided_lifetimes_in_paths = "forbid"
unused_imports = "deny"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
std_instead_of_core = "deny"
alloc_instead_of_core = "deny"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
missing_const_for_fn = "deny"
option_if_let_else = "deny"
use_self = "deny"
redundant_clone = "deny"
unwrap_used = "deny"
disallowed-methods = "deny"

[profile.release]
strip = true
lto = "thin"
