[package]
name = "cgi"
version = "0.1.0"
edition = "2021"

[dependencies]
shorty = { path = "../shorty" }
url = { workspace = true }
http = { workspace = true, features = ["std"] }
headers = { workspace = true }
matchit = { workspace = true }
# rusqlite = { workspace = true, features = ["bundled"] }
askama = { workspace = true }
qrcode = { workspace = true, features = ["svg"] }
base64 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_plain = { workspace = true }

[lints]
workspace = true
