[package]
name = "cgi"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
shorty = { path = "../shorty" }
http = { workspace = true, features = ["std"] }
headers = { workspace = true }
matchit = { workspace = true }
askama = { workspace = true }
qrcode = { workspace = true, features = ["svg"] }
base64 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_plain = { workspace = true }
git-version = { workspace = true }
sentry = { workspace = true, optional = true }
toml = { workspace = true }
xxhash-rust = { workspace = true, features = ["xxh3"] }

[features]
default = ["sentry"]
sentry = ["dep:sentry"]

[dev-dependencies]
html5ever = { workspace = true }
assert_cmd = { workspace = true }
tempfile = { workspace = true }
predicates = { workspace = true }
serial_test = { workspace = true }

[lints]
workspace = true
