[package]
name = "shorty-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
shorty = { path = "../shorty" }
clap = { workspace = true, features = ["derive", "env"] }
csv = { workspace = true }
git-version = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "shorty"      # Dette blir filnavnet på binærfilen
path = "src/main.rs"
